[gd_scene load_steps=10 format=3 uid="uid://cxuttamat22lp"]

[ext_resource type="Theme" uid="uid://cxpo07c6dp3tp" path="res://themes/main_menu.tres" id="1_0av3y"]
[ext_resource type="Script" path="res://scenes/level/level.gd" id="2_6627r"]
[ext_resource type="AudioStream" uid="uid://dgxy0ppuxna56" path="res://audio/jump.wav" id="3_naque"]
[ext_resource type="Texture2D" uid="uid://c7sttspmxggwq" path="res://ui/main_menu_background.jpg" id="4_svhtn"]
[ext_resource type="Texture2D" uid="uid://cbxnnpoex3tau" path="res://scenes/levels/paper_doll/paper_doll_bg.png" id="5_x68o2"]
[ext_resource type="Texture2D" uid="uid://dvke1r6n1d37s" path="res://shared_art/magnifying glass.png" id="13_sygu1"]

[sub_resource type="InputEventKey" id="InputEventKey_w478y"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_nbbvw"]
events = [SubResource("InputEventKey_w478y")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ubbwx"]
bg_color = Color(0.952833, 0.89355, 0.341457, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.952833, 0.89355, 0.341457, 1)
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 10
shadow_offset = Vector2(5, 5)

[node name="Level" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0av3y")
script = ExtResource("2_6627r")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(512, 384)

[node name="prototypes" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabelPrototype" type="RichTextLabel" parent="prototypes"]
layout_mode = 2
offset_left = 132.0
offset_top = 500.0
offset_right = 160.0
offset_bottom = 523.0
bbcode_enabled = true
text = "RTF
"
fit_content = true
autowrap_mode = 0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_naque")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_svhtn")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayArea" type="PanelContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.9

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PlayArea"]
visible = false
layout_mode = 2
texture = ExtResource("5_x68o2")
expand_mode = 1
stretch_mode = 5

[node name="Controls" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="MagnifyingGlass" type="TextureButton" parent="VBoxContainer/Controls"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
disabled = true
texture_normal = ExtResource("13_sygu1")
ignore_texture_size = true
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Controls"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/Controls/VBoxContainer"]
layout_mode = 2

[node name="ItemsToFindContainer" type="GridContainer" parent="VBoxContainer/Controls/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 20
columns = 5

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/Controls/VBoxContainer/PanelContainer/ItemsToFindContainer"]
layout_mode = 2
bbcode_enabled = true
text = "RTF
"
fit_content = true
autowrap_mode = 0

[node name="ScoreLabel" type="RichTextLabel" parent="VBoxContainer/Controls/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
bbcode_enabled = true
text = "Score: 0 / 42"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="HintButton" type="Button" parent="VBoxContainer/Controls"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
disabled = true
text = "Hint"

[node name="QuitButton" type="Button" parent="VBoxContainer/Controls"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
shortcut = SubResource("Shortcut_nbbvw")
text = "< Back"

[node name="WinLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 303.0
offset_top = 291.0
offset_right = 720.0
offset_bottom = 430.0
theme = ExtResource("1_0av3y")
theme_override_colors/font_color = Color(0, 0.717647, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 72
theme_override_styles/normal = SubResource("StyleBoxFlat_ubbwx")
text = "You Won!"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/Controls/QuitButton" to="." method="_on_quit_button_pressed"]
